--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -43,6 +43,20 @@
     height 17px
     margin 50px 0 0 10px
 
+.icon-checkall
+    background-image url('../svg/xz.svg')
+    display block
+    width 20px
+    height 20px
+    margin 0 10px
+
+.icon-uncheckall
+    background-image url('../svg/wxz.svg')
+    display block
+    width 20px
+    height 20px
+    margin 0 10px
+
 .icon-close
     background-image url('../svg/close.svg')
     display inline-block
@@ -253,3 +267,15 @@
     display block
     width 20px
     height 20px
+
+.icon-mobile
+    background-image url('../svg/mobile.svg')
+    display block
+    width 20px
+    height 30px
+
+.icon-passwd
+    background-image url('../svg/passwd.svg')
+    display block
+    width 20px
+    height 25px
