--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -33,14 +33,14 @@
     background-image url('../svg/xz.svg')
     display block
     width 20px
-    height 17px
+    height 20px
     margin 50px 0 0 10px
 
 .icon-uncheck
     background-image url('../svg/wxz.svg')
     display block
     width 20px
-    height 17px
+    height 20px
     margin 50px 0 0 10px
 
 .icon-checkall
@@ -162,7 +162,7 @@
     background-image url('../svg/cart.svg')
     display block
     width 20px
-    height 23px
+    height 20px
     margin 5px auto 0
 
 .icon-car
@@ -271,11 +271,18 @@
 .icon-mobile
     background-image url('../svg/mobile.svg')
     display block
-    width 20px
+    width 30px
     height 30px
 
 .icon-passwd
     background-image url('../svg/passwd.svg')
     display block
+    width 30px
+    height 30px
+
+.icon-vip
+    background-image url('../svg/vip.svg')
+    display block
     width 20px
-    height 25px
+    height 20px
+    margin-right 15px
