--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -286,3 +286,10 @@
     width 20px
     height 20px
     margin-right 15px
+
+.icon-level
+    background-image url('../svg/level.svg')
+    display block
+    width 20px
+    height 20px
+    margin-right 15px
