--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -293,3 +293,45 @@
     width 20px
     height 20px
     margin-right 15px
+
+.icon-qbdd
+    background-image url('../svg/qbdd.svg')
+    display block
+    width 34px
+    height 34px
+    margin 0 auto 10px
+
+.icon-dsh
+    background-image url('../svg/dsh.svg')
+    display block
+    width 34px
+    height 34px
+    margin 0 auto 10px
+
+.icon-dfh
+    background-image url('../svg/dfh.svg')
+    display block
+    width 34px
+    height 34px
+    margin 0 auto 10px
+
+.icon-ywc
+    background-image url('../svg/ywc.svg')
+    display block
+    width 34px
+    height 34px
+    margin 0 auto 10px
+
+.icon-UpVip
+    background-image url('../svg/upVip.svg')
+    display block
+    width 20px
+    height 20px
+    margin-right 15px
+
+.icon-UpAgent
+    background-image url('../svg/upAgent.svg')
+    display block
+    width 20px
+    height 20px
+    margin-right 15px
