--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -77,6 +77,13 @@
     height 24px
     margin 0 auto
 
+.icon-goindex
+    background-image url('../svg/indexh.svg')
+    display block
+    width 30px
+    height 30px
+    margin 0 auto
+
 .icon-found
     background-image url('../svg/found.svg')
     display block
@@ -335,3 +342,10 @@
     width 20px
     height 20px
     margin-right 15px
+
+.icon-stop
+    background-image url('../svg/stop.svg')
+    display block
+    width 30px
+    height 30px
+    margin 10px auto 5px
