--- a/src/common/stylus/index.styl
+++ b/src/common/stylus/index.styl
@@ -15,6 +15,7 @@ body,
 input,textarea
     outline none
     resize none
+    border none
 
 input::-webkit-input-placeholder,    
 textarea::-webkit-input-placeholder       
