--- a/src/common/css/media.css
+++ b/src/common/css/media.css
@@ -10,3 +10,9 @@
         overflow: hidden
     }
 }
+
+@media screen and (max-width: 375px) {
+    .tab-container .category li{
+        margin:0 2px !important
+    }
+}
