--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -349,3 +349,10 @@
     width 30px
     height 30px
     margin 10px auto 5px
+
+.icon-tips
+    background-image url('../svg/tips.svg')
+    display block
+    width 20px
+    height 20px
+    margin-right 5px
