--- a/src/common/stylus/index.styl
+++ b/src/common/stylus/index.styl
@@ -44,3 +44,8 @@ textarea::-webkit-input-placeholder
 #nprogress .spinner-icon
     border-top-color $green
     border-left-color $green
+
+// 弹框
+.index-wrapper
+    .weui-dialog>div:nth-child(2)
+        text-align left !important
