--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -124,6 +124,21 @@
     height 24px
     margin 0 auto
 
+.icon-rank
+    background-image url('../svg/rank.svg')
+    display block
+    width 24px
+    height 24px
+    margin 0 auto
+
+.router-link-exact-active .icon-rank
+    background-image url('../svg/rankh.svg')
+    display block
+    width 24px
+    height 24px
+    margin 0 auto
+
+
 .icon-dingdan
     background-image url('../svg/dingdan.svg')
     display block
@@ -356,3 +371,24 @@
     width 20px
     height 20px
     margin-right 5px
+
+.icon-no1
+    background-image url('../svg/no1.svg')
+    display block
+    width 30px
+    height 35px
+    margin 0 auto
+
+.icon-no2
+    background-image url('../svg/no2.svg')
+    display block
+    width 30px
+    height 35px
+    margin 0 auto
+
+.icon-no3
+    background-image url('../svg/no3.svg')
+    display block
+    width 30px
+    height 35px
+    margin 0 auto
