--- a/src/common/css/media.css
+++ b/src/common/css/media.css
@@ -1,3 +1,4 @@
+/* 兼容iphone5 */
 @media screen and (max-width: 321px) {
     .earnings-wrapper .sheet>ul {
         margin: 0 40px 15px !important
@@ -8,6 +9,18 @@
         white-space: nowrap;
         text-overflow: ellipsis;
         overflow: hidden
+    }
+    .index-wrapper .header img{
+        width:50px !important;
+        height:50px !important;
+    }
+    .index-wrapper .header .name{
+        font-size:18px !important;
+        margin-top:0px !important;
+    }
+    .index-wrapper .header .mobile{
+        font-size:14px !important;
+        line-height: 16px !important;
     }
 }
 
