--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -392,3 +392,10 @@
     width 30px
     height 35px
     margin 0 auto
+
+.icon-phone
+    background-image url('../svg/phone.svg')
+    display block
+    width 20px
+    height 20px
+    margin-left 10px
