--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -399,3 +399,10 @@
     width 20px
     height 20px
     margin-left 10px
+
+.icon-gobackIndex
+    background-image url('../svg/index.svg')
+    display block
+    width 20px
+    height 20px
+    margin 5px auto 0
