--- a/src/common/stylus/dialog.styl
+++ b/src/common/stylus/dialog.styl
@@ -10,3 +10,22 @@
         border-top 1px solid #efefef
         color $green
         border-radius 8px
+
+
+/* dialog */
+.confirm-container
+    border-radius 5px
+    margin 0 20px
+    padding 0 0 20px
+    .content
+        margin 20px 0
+        line-height 22px
+    .submit
+        line-height 45px
+        color #fff
+        background linear-gradient(270deg,rgba(0,172,252,1) 0%,rgba(64,124,230,1) 100%)
+        box-shadow 0px 7px 10px -5px rgba(113,171,253,1)
+        border-radius 3px
+    .cancel
+        color $text-lll
+        line-height 45px
