--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -127,7 +127,7 @@
 .icon-rank
     background-image url('../svg/rank.svg')
     display block
-    width 24px
+    width 27px !important
     height 24px
     margin 0 auto
 
@@ -396,8 +396,8 @@
 .icon-phone
     background-image url('../svg/phone.svg')
     display block
-    width 30px
-    height 30px
+    width 24px
+    height 24px
     margin-left 10px
 
 .icon-gobackIndex
