--- a/src/common/stylus/transition.styl
+++ b/src/common/stylus/transition.styl
@@ -9,3 +9,9 @@
     transform translateY(-100%)
 .slideDown-enter-active,.slideDown-leave-active
     transition all 0.25s
+
+// 首页设置邀请人
+.slideTop-enter, .slideTop-leave-to
+    transform translateY(-100%)
+.slideTop-enter-active, .slideTop-leave-active
+    transition all 0.25s
