--- a/src/common/stylus/index.styl
+++ b/src/common/stylus/index.styl
@@ -37,8 +37,8 @@ textarea::-webkit-input-placeholder
     background $red
 .large-green-button
     line-height 50px
-    background linear-gradient(180deg,rgba(100,229,198,1) 0%,rgba(41,206,166,1) 100%)
-    box-shadow 0px 4px 7px 0px rgba(41,206,166,0.47)
+    background linear-gradient(180deg,rgba(0,132,255,1) 0%,rgba(69,165,255,1) 100%);
+    box-shadow 0px 4px 7px 0px rgba(0,132,255,0.3)
     border-radius 5px
     color #fff
     font-weight bold
