--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -195,7 +195,7 @@
 
 .icon-date
     background-image url('../svg/date.svg')
-    display block
+    display inline-block
     width 24px
     height 21px
     margin 4.5px 0
@@ -302,12 +302,12 @@
     width 30px
     height 30px
 
-.icon-vip
-    background-image url('../svg/vip.svg')
-    display block
-    width 20px
-    height 20px
-    margin-right 15px
+// .icon-vip
+//     background-image url('../svg/vip.svg')
+//     display block
+//     width 20px
+//     height 20px
+//     margin-right 15px
 
 .icon-level
     background-image url('../svg/level.svg')
@@ -406,3 +406,17 @@
     width 20px
     height 20px
     margin 5px auto 0
+
+.icon-agent
+    background-image url('../svg/zongdai.svg')
+    display block
+    width 20px
+    height 20px
+    margin-right 15px
+
+.icon-vip
+    background-image url('../svg/ktvip.svg')
+    display block
+    width 20px
+    height 20px
+    margin-right 15px
