--- a/src/common/stylus/index.styl
+++ b/src/common/stylus/index.styl
@@ -74,3 +74,8 @@ textarea::-webkit-input-placeholder
         background-color $green
     .vux-x-switch.weui-cell_switch
         padding-right 0
+// 收益时间的箭头隐藏
+.earnings-wrapper
+    .weui-cell_access .weui-cell__ft
+        &:after
+            display none
