--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -70,7 +70,7 @@
     height 24px
     margin 0 auto
 
-.router-link-exact-active .icon-index
+.router-link-active .icon-index
     background-image url('../svg/indexh.svg')
     display block
     width 24px
@@ -91,7 +91,7 @@
     height 24px
     margin 0 auto
 
-.router-link-exact-active .icon-found
+.router-link-active .icon-found
     background-image url('../svg/foundh.svg')
     display block
     width 24px
@@ -117,7 +117,7 @@
     height 24px
     margin 0 auto
 
-.router-link-exact-active .icon-cart
+.router-link-active .icon-cart
     background-image url('../svg/cart.svg')
     display block
     width 24px
@@ -131,7 +131,7 @@
     height 24px
     margin 0 auto
 
-.router-link-exact-active .icon-rank
+.router-link-active .icon-rank
     background-image url('../svg/rankh.svg')
     display block
     width 24px
