--- a/src/common/stylus/index.styl
+++ b/src/common/stylus/index.styl
@@ -76,6 +76,9 @@ textarea::-webkit-input-placeholder
         padding-right 0
 // 收益时间的箭头隐藏
 .earnings-wrapper
+    .weui-cell_access
+        &:before
+            display none
     .weui-cell_access .weui-cell__ft
         &:after
             display none
