--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -104,7 +104,7 @@
     width 24px
     height 24px
     margin 0 auto
-.router-link-exact-active .icon-my
+.router-link-active .icon-my
     background-image url('../svg/myh.svg')
     display block
     width 24px
