--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -420,3 +420,9 @@
     width 20px
     height 20px
     margin-right 15px
+
+.icon-phone1
+    background-image url('../svg/dianhua2.svg')
+    display block
+    width 18px
+    height 18px
