--- a/src/common/stylus/dialog.styl
+++ b/src/common/stylus/dialog.styl
@@ -27,10 +27,11 @@
         box-shadow 0px 7px 10px -5px rgba(113,171,253,1)
         border-radius 3px
     .cancel
-        height 50px
-        line-height 50px
+        height 45px
+        line-height 45px
         color $text-l
         border 1px solid $line
-        margin 20px 15px
+        margin 20px 0px
         border-radius 5px
         font-weight bold
+        box-sizing border-box
